...
            android:orientation="horizontal"
            android:layout_margin="12dp"

            android:gravity="center_vertical">

            <EditText
                android:id="@+id/promoCodeEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_promo_code"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
...
                android:backgroundTint="@color/theme"
                android:layout_marginEnd="8dp"
                android:paddingVertical="12dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                app:cornerRadius="32dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
...
